--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "webpack-dev-server --mode development --open --hot",
-      "build": "webpack --mode production"
+    "test": "jest",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
+    "grammar": "antlr4 ./src/regex.g4 -o src/grammar/generated -Dlanguage=JavaScript -visitor -no-listener"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/DanielBV/RegexEngine#readme",
   "dependencies": {
+    "antlr4": "^4.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -28,6 +30,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.5",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
