--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "antlr4": "^4.9.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "viz.js": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
