--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "homepage": "https://github.com/DanielBV/RegexEngine#readme",
   "dependencies": {
     "antlr4": "^4.9.3",
+    "bootstrap": "^5.1.3",
+    "css-loader": "^6.5.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "style-loader": "^3.3.1",
     "viz.js": "^2.1.2"
   },
   "devDependencies": {
