--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production --config ./webpack.prod.js",
     "grammar": "antlr4 ./src/regex.g4 -o src/grammar/generated -Dlanguage=JavaScript -visitor -no-listener"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "antlr4": "^4.9.3",
     "bootstrap": "^5.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
@@ -36,6 +37,7 @@
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.5",
+    "mini-css-extract-plugin": "^2.4.5",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
