--- a/package.json
+++ b/package.json
@@ -22,12 +22,9 @@
   "dependencies": {
     "antlr4": "^4.9.3",
     "bootstrap": "^5.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "style-loader": "^3.3.1",
     "viz.js": "^2.1.2"
   },
   "devDependencies": {
@@ -40,6 +37,9 @@
     "mini-css-extract-plugin": "^2.4.5",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2"
+    "webpack-dev-server": "^4.7.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "style-loader": "^3.3.1",
+    "css-loader": "^6.5.1"
   }
 }
