--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,9 @@ jobs:
       with:
         node-version: '16'
     - run: npm ci
+    - name: Install antlr4
+      - run:  wget https://www.antlr.org/download/antlr-4.9.2-complete.jar
+      - run: alias antlr4='java -jar antlr-4.9.2-complete.jar'
     - run: npm run grammar
     - run: npm test
     - run: npm run build
