--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
         wget https://www.antlr.org/download/antlr-4.9.2-complete.jar
         shopt -s expand_aliases
         alias antlr4='java -jar antlr-4.9.2-complete.jar'
-    - run: npm run grammar
+        npm run grammar
     - run: npm test
     - run: npm run build
     - name: Commit and push
