--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,10 +12,11 @@ jobs:
       with:
         node-version: '16'
     - run: npm ci
+    - run: shopt -s expand_aliases
     - name: Install antlr4
       run:  | 
-        wget https://www.antlr.org/download/antlr-4.9.2-complete.jar
         shopt -s expand_aliases
+        wget https://www.antlr.org/download/antlr-4.9.2-complete.jar
         alias antlr4='java -jar antlr-4.9.2-complete.jar'
         npm run grammar
     - run: npm test
