--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,6 +19,8 @@ jobs:
       run: java -jar antlr-4.9.2-complete.jar ./src/regex.g4 -o src/grammar/generated -Dlanguage=JavaScript -visitor -no-listener
     - name: Test
       run: ls src/grammar/generated
+    - name: Test2
+      run: ls src/grammar/
     - run: npm test
     - run: npm run build
     - name: Commit and push
