--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 name: Deploy to GitHub pages
 on:
   push:
-    branches: [ main ]
+    branches: [ main, actions ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,13 +12,10 @@ jobs:
       with:
         node-version: '16'
     - run: npm ci
-    - run: shopt -s expand_aliases
     - name: Install antlr4
-      run:  | 
-        shopt -s expand_aliases
-        wget https://www.antlr.org/download/antlr-4.9.2-complete.jar
-        java -jar antlr-4.9.2-complete.jar ./src/regex.g4 -o src/grammar/generated -Dlanguage=JavaScript -visitor -no-listener"
-        npm run grammar
+      run:  wget https://www.antlr.org/download/antlr-4.9.2-complete.jar
+    - name: Compile grammar
+      run: java -jar antlr-4.9.2-complete.jar ./src/regex.g4 -o ./src/grammar/generated -Dlanguage=JavaScript -visitor -no-listener -Xexact-output-dir
     - run: npm test
     - run: npm run build
     - name: Commit and push
