--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,12 +21,8 @@ jobs:
     - name: Commit and push
       run: |
         cd docs/
-        git add -A *
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git status
-        git add -u *
-        git status
-        git commit -m 'Deploy'
+        git commit -am 'Deploy'
         git push
 
