--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,8 @@ jobs:
         cd docs/
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git add *.css
+        ls
         git commit -am 'Deploy'
         git push
 
